--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/router": "^20.0.0",
     "@ng-web-apis/common": "^4.12.0",
     "@ng-web-apis/speech": "^4.12.0",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
+    "@types/gapi.client.drive": "^3.0.15",
+    "gapi-script": "^1.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
