--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.1.0",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.1.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@ng-web-apis/common": "^4.12.0",
@@ -21,6 +23,7 @@
     "@types/gapi": "^0.0.47",
     "@types/gapi.auth2": "^0.0.61",
     "@types/gapi.client.drive": "^3.0.15",
+    "angular-google-picker": "^0.2.2",
     "gapi-script": "^1.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
