--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/material": "^20.1.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@google/genai": "^1.10.0",
     "@ng-web-apis/common": "^4.12.0",
     "@ng-web-apis/speech": "^4.12.0",
     "@types/gapi": "^0.0.47",
